# Fern

./: .coverage  AGENT.md  Fern-Sped.md  LICENSE  README.md  TODOS.md  install.sh  pyproject.toml
hammerspoon/: chart_view.lua  charts.lua  init.lua  overlay.lua
homebrew/: fern.rb
scripts/: test_pitch.py
src/fern/: __init__.py  analysis.py  capture.py  cli.py  config.py  db.py  errors.py  logging.py  models.py  websocket_server.py
src/fern.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_config.py
